# rabbitmq-migration-research

./: README.md  cleanup.sh  federation.sh
testapp/: Cargo.toml
testapp/src/: main.rs
