[package]
name = "testapp"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[dependencies]
lapin = { version = "0.28", features = ["futures"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
sled = "0.30"
